--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
       <section>
         <!--Заголовок будет скрыт-->
         <h2>Особенности</h2>
+		  <!--содержание секции-->
         <ul>
           <li>
             <h3>Внимание к деталям</h3>
